tests/ui/suggestions/missing-bound-in-derive-copy-impl-3.stderr
error[E0204]: the trait `Copy` cannot be implemented for this type
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:10:17
   |
LL | #[derive(Debug, Copy, Clone)]
   |                 ^^^^
LL | pub struct AABB<K: Copy>{
LL |     pub loc: Vector2<K>,
   |     ------------------- this field does not implement `Copy`
   |
note: the `Copy` impl for `Vector2<K>` requires that `K: Debug`
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:12:14
   |
LL |     pub loc: Vector2<K>,
   |              ^^^^^^^^^^
help: consider further restricting type parameter `K` with trait `Debug`
   |
LL | pub struct AABB<K: Copy + Debug>{
   |                         +++++++

error[E0277]: `K` doesn't implement `Debug`
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:12:14
   |
LL |     pub loc: Vector2<K>,
   |              ^^^^^^^^^^ the trait `Debug` is not implemented for `K`
   |
note: required by a bound in `Vector2`
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:5:23
   |
LL | pub struct Vector2<T: Debug + Copy + Clone>{
   |                       ^^^^^ required by this bound in `Vector2`
help: consider further restricting type parameter `K` with trait `Debug`
   |
LL | pub struct AABB<K: Copy + std::fmt::Debug>{
   |                         +++++++++++++++++

error[E0277]: `K` doesn't implement `Debug`
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:12:5
   |
LL | #[derive(Debug, Copy, Clone)]
   |                       ----- in this derive macro expansion
LL | pub struct AABB<K: Copy>{
LL |     pub loc: Vector2<K>,
   |     ^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `K`
   |
help: consider further restricting type parameter `K` with trait `Debug`
   |
LL | pub struct AABB<K: Copy + std::fmt::Debug>{
   |                         +++++++++++++++++

error[E0277]: `K` doesn't implement `Debug`
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:14:5
   |
LL | #[derive(Debug, Copy, Clone)]
   |                       ----- in this derive macro expansion
...
LL |     pub size: Vector2<K>
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `K`
   |
help: consider further restricting type parameter `K` with trait `Debug`
   |
LL | pub struct AABB<K: Copy + std::fmt::Debug>{
   |                         +++++++++++++++++

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0204, E0277.
For more information about an error, try `rustc --explain E0204`.
